syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.rahulpriolkar.raft";

service RaftRPCService {
  rpc appendEntries (AppendEntriesRequest) returns (AppendEntriesResponse) {}
  rpc requestVote (RequestVoteRequest) returns (RequestVoteResponse) {}
}

message LogEntry {
  string key = 1;
  string value = 2;
  int64 term = 3;
}

message AppendEntriesRequest {
  int64 term = 1;
  string leaderId = 2;
  int32 prevLogIndex = 3;
  int64 prevLogTerm = 4;
  repeated LogEntry entries = 5;
  int32 commitIndex = 6;
  int64 senderPort = 7; // For Debugging Purposes

}

message AppendEntriesResponse {
  int64 term = 1;
  bool success = 2;
  int64 senderPort = 3;
}

message RequestVoteRequest {
  int64 term = 1;
  string candidateId = 2;
  int32 lastLogIndex = 3;
  int64 lastLogTerm = 4;
}

message RequestVoteResponse {
  int64 term = 1;
  bool voteGranted = 2;
  int64 senderPort = 3; // For Debugging Purposes
}